--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -12,7 +12,7 @@
         </a>
       {% endif %}
     </div>
-    <div class="col-auto pl-0" id="search">
+    <div class="col-auto pl-0">
       <form class="form-inline" id="search-form" method="GET" action="{% url 'search' %}">
         <div class="input-group" id="search-field">
           <label for="q" class="sr-only">Search</label>
