--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,91 +1,36 @@
-<div class="col results">
-  <div class="row results-bar">
-    <div class="col results-header">
-      <span>
-        {{ chart.header }}
-      </span>
-    </div>
-    <div class="col-auto results-options">
-      <ul>
-        {% if chart.genre %}
-          <li>
-            <a class="btn btn-dope btn-dope-tab toggle active" data-toggle="collapse" href="#chart-genre-collapse" aria-expanded="false" aria-controls="chart-genre-collapse">
-              Genre
-            </a>
-          </li>
-        {% else %}
-          <li>
-            <a class="btn btn-dope btn-dope-tab toggle" data-toggle="collapse" href="#chart-genre-collapse" aria-expanded="false" aria-controls="chart-genre-collapse">
-              Genre
-            </a>
-          </li>
-        {% endif %}
-      </ul>
-    </div>
-  </div>
-  <div class="row options-select color-1 chart-selected-buttons">
-    {% if chart.genre %}
-      <div class="col-auto ml-auto options-group">
-        <a class="btn btn-dope selected-button active" href="{% url 'charts' %}">
-          {{ chart.genre }}
-          <i class="fas fa-times-circle icon selected"></i>
-        </a>
-      </div>
-    {% endif %}
-    <div class="collapse chart-options-collapse" id="chart-genre-collapse">
-      <div class="options-group chart-genre-buttons">
-        {% if chart.genre %}
-        <a class="btn btn-dope options-button" href="{% url 'charts' %}">
-          All
-        {% endif %}
-        {% for genre in chart_genres %}
-          {% if not chart.genre == genre.name %}
-            <a class="btn btn-dope options-button" href="{% url 'charts' %}?genre={{ genre.url_format }}">
-              {{ genre.name }}
-            </a>
+<div class="row results-content">
+  <div class="col">
+    {% for podcast in results.podcasts %}
+      <div class="row">
+        <div class="col-auto">
+          {% if results.selected_genre %}
+            {{ podcast.genre_rank }}
+          {% else %}
+            {{ podcast.global_rank }}
           {% endif %}
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-  <div class="row results-wrapper">
-    <div class="col">
-      <div class="row results-content">
+        </div>
+        <div class="col-auto">
+          <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+            <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
+          </a>
+        </div>
         <div class="col">
-          {% for podcast in chart.sorted_podcasts %}
-            <div class="row">
-              <div class="col-auto">
-                {% if chart.genre %}
-                  {{ podcast.genre_rank }}
-                {% else %}
-                  {{ podcast.global_rank }}
-                {% endif %}
-              </div>
-              <div class="col-auto">
-                <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-                  <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
-                </a>
-              </div>
-              <div class="col">
-                <h6 class="result-title">
-                  <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-                    {{ podcast.title }}
-                  </a>
-                </h6>
-                <p class="result-artist">
-                  <span>by </span>
-                  <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
-                    {{ podcast.artist }}
-                  </a>
-                </p>
-              </div>
-            </div>
-            {% if not forloop.last %}
-              <hr class="h-line" />
-            {% endif %}
-          {% endfor %}
+          <h5 class="result-title">
+            <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+              {{ podcast.title }}
+            </a>
+          </h5>
+          <h6 class="result-artist">
+            <span>by </span>
+            <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
+              {{ podcast.artist }}
+            </a>
+          </h6>
         </div>
       </div>
-    </div>
+      {% if not forloop.last %}
+        <hr class="h-line" />
+      {% endif %}
+    {% endfor %}
   </div>
 </div>
