--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,100 +1,65 @@
-{% if episodes %}
-<div class="col results">
-  <div class="row results-bar">
-    <div class="col results-header">
-      <span>
-        {{ episodes_header }}
-      </span>    
-    </div>
-    <div class="col-auto results-options">
-      <ul>
-        <li>
-          <a class="btn btn-dope btn-dope-tab reverse-toggle results-minimize" data-toggle="collapse" href="#episode-collapse" aria-expanded="true" aria-controls="episode-collapse" aria-label="Minimize">
-            <i class="fas fa-minus-circle icon"></i>
-          </a>
-        </li>
-        <li>
-          <a class="btn btn-dope btn-dope-tab results-close" href="#" aria-label="Close">
-            <i class="fas fa-times-circle icon"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="row options-select color-1" id="episodes-selected-buttons" data-toggle="buttons">
-    {% if episode_selected_options %}
-    <div class="col-auto mr-auto selected-group">
-    </div>
-     {% endif %}
-  </div>
-  <div class="row collapse show results-wrapper" id="episode-collapse">
-    <div class="col">
-      <table class="table" id="episodes-table">
-          <thead>
-            <tr>
-              <th>
-                #
-              </th>
-              <th>
-                Title
-              </th>
-              <th>
-                Released
-              </th>
-              <th>
-                Length
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for episode in episodes %}
-            <tr class="hover toggle" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}">
-              <th scope="row">{{ forloop.counter }}</th>
-              <td>
-                {{ episode.title }}
-              </td>
-              <td>
-                {{ episode.pubDate }}
-              </td>
-              <td>
-                {% if episode.length %}
-                {{ episode.length }}
-                {% else %}
-                N/A
-                {% endif %}
-              </td>
-            </tr>
-            <tr>
-              <td colspan="4" class="hidden-row">
-                <div class="collapse more-collapse" id="more-collapse{{ forloop.counter }}">
-                  <div class="episode-more">
-                    <span class="episode-summary">
-                      {{ episode.summary }}
-                    </span>
-                    <div class="episode-buttons float-right">
-                      <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
-                        {% csrf_token %}
-                        <input type="hidden" name="url" value="{{ episode.url }}">
-                        <input type="hidden" name="type" value="{{ episode.type }}">
-                        <input type="hidden" name="title" value="{{ episode.title }}">
-                        <input type="hidden" name="date" value="{{ episode.pubDate }}">
-                        <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-                        <button class="btn btn-dope active" type="submit">
-                          Play
-                        </button>
-                      </form>
-                      <a class="btn btn-dope active" href="{{ episode.url }}" title="Download" download>
-                        Download
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-    </div>
-  </div>
-</div>
-{% endif %}
+<table class="table" id="episodes-table">
+  <thead>
+    <tr>
+      <th>
+        #
+      </th>
+      <th>
+        Title
+      </th>
+      <th>
+        Released
+      </th>
+      <th>
+        Length
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for episode in results.episodes %}
+      <tr class="hover toggle" data-toggle="collapse" data-target="#more-collapse{{ forloop.counter }}">
+        <th scope="row">{{ forloop.counter }}</th>
+        <td>
+          {{ episode.title }}
+        </td>
+        <td>
+          {{ episode.pubDate }}
+        </td>
+        <td>
+          {% if episode.length %}
+          {{ episode.length }}
+          {% else %}
+          N/A
+          {% endif %}
+        </td>
+      </tr>
+      <tr>
+        <td colspan="4" class="hidden-row">
+          <div class="collapse more-collapse" id="more-collapse{{ forloop.counter }}">
+            <div class="episode-more">
+              <span class="episode-summary">
+                {{ episode.summary }}
+              </span>
+              <div class="episode-buttons float-right">
+                <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
+                  {% csrf_token %}
+                  <input type="hidden" name="url" value="{{ episode.url }}">
+                  <input type="hidden" name="type" value="{{ episode.type }}">
+                  <input type="hidden" name="title" value="{{ episode.title }}">
+                  <input type="hidden" name="date" value="{{ episode.pubDate }}">
+                  <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+                  <button class="btn btn-dope active" type="submit">
+                    Play
+                  </button>
+                </form>
+                <a class="btn btn-dope active" href="{{ episode.url }}" title="Download" download>
+                  Download
+                </a>
+              </div>
+            </div>
+          </div>
+        </td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
