--- a/podcasts/templates/list.html
+++ b/podcasts/templates/list.html
@@ -1,15 +1,7 @@
-{% extends 'results_base.html' %}
-
-{% block title %}
-dopepod
-{% endblock %}
-
-{% block results_content %}
-{% if podcasts %}
 <div class="row results-content">
   <div class="col-lg-3 col-md-6 col-sm-12">
     <ul class="browse-results-list">
-      {% for podcast in podcasts1 %}
+      {% for podcast in results.podcasts1 %}
         <li>
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
             {{ podcast.title }}
@@ -20,7 +12,7 @@ dopepod
   </div>
   <div class="col-lg-3 col-md-6 col-sm-12">
     <ul class="browse-results-list">
-      {% for podcast in podcasts2 %}
+      {% for podcast in results.podcasts2 %}
         <li>
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
             {{ podcast.title }}
@@ -31,7 +23,7 @@ dopepod
   </div>
   <div class="col-lg-3 col-md-6 col-sm-12">
     <ul class="browse-results-list">
-      {% for podcast in podcasts3 %}
+      {% for podcast in results.podcasts3 %}
         <li>
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
             {{ podcast.title }}
@@ -42,7 +34,7 @@ dopepod
   </div>
   <div class="col-lg-3 col-md-6 col-sm-12">
     <ul class="browse-results-list">
-      {% for podcast in podcasts4 %}
+      {% for podcast in results.podcasts4 %}
         <li>
           <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
             {{ podcast.title }}
@@ -52,5 +44,3 @@ dopepod
     </ul>
   </div>
 </div>
-{% endif %}
-{% endblock %}
